# mail-to-files

./: .gitignore  pyproject.toml
mail_to_files/: cli.py  config.py  mailing.py  nx.py
tests/: test_mail_to_files.py
